# graphic_editor

./: CMakeLists.txt  Controller.cpp  Controller.h  Graphic Editor Prototype.cpp  Model.cpp  Model.h  README.md  View.cpp  View.h
.github/workflows/: release.yml
